--- a/Angular/src/app/pages/qrcode-generator/qrcode-generator.component.scss
+++ b/Angular/src/app/pages/qrcode-generator/qrcode-generator.component.scss
@@ -8,7 +8,10 @@
     text-align: center;
     margin-bottom: 30px;
     padding: 20px;
-    background: linear-gradient(180deg,#268730 10%,#027cad);
+    background: linear-gradient(
+      135deg,
+      #667eea,
+      #764ba2);
     color: white;
     border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -183,7 +186,10 @@
         }
 
         &.btn-primary {
-          background: linear-gradient(180deg,#268730 10%,#027cad);
+          background: linear-gradient(
+      135deg,
+      #667eea,
+      #764ba2);
           color: white;
 
           &:hover:not(:disabled) {
